# python-minisat

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  requirements.txt  setup.py
minisat/: __init__.py  minisatbind.cpp
tests/: test_minisat.py
travis/: build-wheels.sh
